# quantum_power_spectrum

./: CMakeLists.txt  README.md  USER_GUIDE.md  architecture.txt  main.cpp  plot_results.py  structure.txt
include/: BackgroundCosmology.h  FKPEstimator.h  GalaxyCatalog.h  LandySzalay.h  PowerSpectrum.h  QuantumQFT.h  TransferFunction.h
src/: BackgroundCosmology.cpp  FKPEstimator.cpp  GalaxyCatalog.cpp  LandySzalay.cpp  PowerSpectrum.cpp  QuantumQFT.cpp  TransferFunction.cpp
tng_data_prep/: .env  .env.example  .gitignor  catalog_io.py  convert_custom.py  fetch_sdss.py  fetch_tng.py  fetch_tng_cluster.py  run.sh  setup.sh
